Avoid IDE warnings