@@ -45,14 +45,14 @@ import static java.time.ZoneOffset.UTC;
 
 final class DateTimeParsing
 {
-    static final Pattern DATETIME_PATTERN = Pattern.compile("" +
+    static final Pattern DATETIME_PATTERN = Pattern.compile(
             "(?<year>[-+]?\\d{4,})-(?<month>\\d{1,2})-(?<day>\\d{1,2})" +
-            "( (?:(?<hour>\\d{1,2}):(?<minute>\\d{1,2})(?::(?<second>\\d{1,2})(?:\\.(?<fraction>\\d+))?)?)?" +
-            "\\s*(?<timezone>.+)?)?");
+                    "( (?:(?<hour>\\d{1,2}):(?<minute>\\d{1,2})(?::(?<second>\\d{1,2})(?:\\.(?<fraction>\\d+))?)?)?" +
+                    "\\s*(?<timezone>.+)?)?");
 
-    static final Pattern TIME_PATTERN = Pattern.compile("" +
+    static final Pattern TIME_PATTERN = Pattern.compile(
             "(?<hour>\\d{1,2}):(?<minute>\\d{1,2})(?::(?<second>\\d{1,2})(?:\\.(?<fraction>\\d+))?)?" +
-            "\\s*((?<sign>[+-])(?<offsetHour>\\d\\d):(?<offsetMinute>\\d\\d))?");
+                    "\\s*((?<sign>[+-])(?<offsetHour>\\d\\d):(?<offsetMinute>\\d\\d))?");
 
     private static final long[] POWERS_OF_TEN = {
             1L,
@@ -353,7 +353,7 @@ final class DateTimeParsing
             fractionValue = Long.parseLong(fraction);
         }
 
-        long picos = (((hour * 60) + minute) * 60 + second) * PICOSECONDS_PER_SECOND + rescale(fractionValue, precision, 12);
+        long picos = (((hour * 60L) + minute) * 60 + second) * PICOSECONDS_PER_SECOND + rescale(fractionValue, precision, 12);
         return new LongTimeWithTimeZone(picos, (offsetSign * (offsetHour * 60 + offsetMinute)));
     }
 
@@ -373,7 +373,7 @@ final class DateTimeParsing
             throw new IllegalArgumentException("Invalid TIMESTAMP due to daylight savings transition");
         }
 
-        return timestamp.toEpochSecond(offsets.get(0));
+        return timestamp.toEpochSecond(offsets.getFirst());
     }
 
     private static LongTimestamp longTimestamp(long epochSecond, long fractionInPicos)
